--- a/stractic/templates/stractic/detail.html
+++ b/stractic/templates/stractic/detail.html
@@ -1,3 +1,6 @@
+{% extends 'stractic/base.html' %}
+
+{% block content %}
 <ul>
 	<li>{{ resource.resource_name }}</li>
 	<li>{{ resource.resource_url }}</li>
@@ -10,3 +13,5 @@
     <li>{{ favorite.comments }}</li>
 {% endfor %}
 </ul>
+
+{% endblock %}
