add signup and signin plus logout

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,10 +3,12 @@
 {% block body %}
   <div class="container">
     <h2>Sign up</h2>
-    <form method="post" novalidate>
+    <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      
+
+      <!-- Need to add validation here -->
+
       {% if field.help_text %}
 	      <small class="form-text text-muted">
 	        {{ field.help_text|safe }}  <!-- new code here -->
@@ -16,4 +18,6 @@
       <button type="submit" class="btn btn-primary">Create an account</button>
     </form>
   </div>
+
+  Already have an account? <a href="{% url 'login' %}">Log in</a>
 {% endblock %}
