add password reset

--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -1,8 +1,12 @@
 {% for field in form %}
-  <div class="form-group">
-    {{ field.label_tag }}
-
-    <!-- code suppressed for brevity -->
+		<div class="form-group">
+	        <label>{{ field.label }}</label>
+	    </div>
+	        {% if field.errors %}
+	            {{ field.errors }}
+	        {% endif %}
+	        {{ field }}
+    	{% endfor %}
 
     {% if field.help_text %}
       <small class="form-text text-muted">
@@ -10,4 +14,3 @@
       </small>
     {% endif %}
   </div>
-{% endfor %}
