--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand" href="{% url 'index' %}">LOADING FROM BASE TEMPLATE</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="{% url 'index' %}">Home</a></li>
     </ul>
 
 {% if user.is_authenticated %}
@@ -31,6 +31,7 @@
         </li>
       </ul>
 {% else %}
+
 <form class="form-inline ml-auto">
           <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
           <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
@@ -48,12 +49,14 @@
         {% block content %}
         {% endblock %}
       </div>
-    {% endblock body %}  <!-- AND HERE -->
+    {% endblock body %}  
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-            <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </body>
 </html>
