--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
-{% load static %}
-
-{% block body %}
-
+{% block content %}
+  <div class="container">
+    <h2>Sign up</h2>
 	<form method="post" novalidate>
 		{% csrf_token %}
 		{% include 'includes/form.html' %}
@@ -14,12 +13,13 @@
 			{% endfor %}
 			</div>
 		{% endif %}
-    <input type="hidden" name="next" value="{{ next }}" />
-    <input class="btn btn-primary" type="submit" value="Submit"/>
+	    <input type="hidden" name="next" value="{{ next }}" />
+	    <input class="btn btn-primary" type="submit" value="Submit"/>
     </form>
 
 
-    Don't have an account? <a href="{% url 'signup' %}">Sign Up</a>
-
+    <p>Don't have an account? </p>
+    <a href="{% url 'signup' %}">Sign Up</a>
+</div>
 
 {% endblock %}
