--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block content %}
   <div class="container">
     <h2>Sign up</h2>
     <form method="post">
@@ -17,7 +17,8 @@
 
       <button type="submit" class="btn btn-primary">Create an account</button>
     </form>
-  </div>
+
 
   Already have an account? <a href="{% url 'login' %}">Log in</a>
+</div>
 {% endblock %}
