--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">LOADING FROM BASE TEMPLATE</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Stractic</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="{% url 'index' %}">Home</a></li>
@@ -29,6 +29,10 @@
             <li><a href="{% url 'logout' %}">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
           </ul>
         </li>
+      </ul>
+
+      <ul class = "nav navbar-nav">
+        <li><a href="{% url 'stractic:resource_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></li>
       </ul>
 {% else %}
 
